--- a/index.html
+++ b/index.html
@@ -1,47 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      />
-    <title>Majlis Joging Mandi</title>
-  </head>
-  <body>
-    <div class="container animate__animated animate__zoomIn">
-      <!-- profile picture -->
-      <div class="profile">
-        <img src="7fe87ed7-d5ce-4c49-a8f7-c834ed9264c2.jpg" alt="error image" class="animate__animated
-          animate__pulse animate__infinite" />
-        <p class="animate__animated animate__fadeInDownBig">Muhammad Riski</p>
-      </div>
+    <title>Ngalam Kreatif</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <div class="wrapper">
+            <div class="logo"><a href=''>Ngalam Kreatif</a></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#Absensi">Absensi</a></li>
+                    <li><a href="#Keuangan">Keuangan</a></li>
+                    <li><a href="#Project">Project</a></li>
+                    <li><a href="#partners">Partners</a></li>
+                    <li><a href="#status">status</a></li>
+                    <li><a href="" class="tbl-biru">#NgalamKreatif</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="wrapper">
+        <!-- untuk home -->
+        <section id="Absensi">
+            <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
+            <div class="kolom">
+                <p class="deskripsi">Ezio22 #NgalamKreatif</p>
+                <h2>Tetap Sehat, Tetap Semangat</h2>
+                <p>Data absensi Akan Update Selama 1 minggu klik tabel pink dibawah ini untuk melihat data absensi lebih lanjut.</p>
+                <p><a href="" class="tbl-pink">data Absensi</a></p>
+            </div>
+        </section>
 
-      <!-- link tree button -->
-      <div class="link">
-        <a href="https://instagram.com/dea.afrizal" target="_blank"
-          class="animate__animated animate__bounceInLeft">instagram</a>
-        <a href="https://telegram.com" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-1s">telegram</a>
-        <a href="https://discord.com" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-2s">Bokep</a>
-        <a href="https://youtube.com/deaafrizal" target="_blank"
-          class="animate__animated animate__bounceInLeft animate__delay-3s">Status</a>
-      </div>
+        <!-- untuk courses -->
+        <section id="Keuangan">
+            <div class="kolom">
+                <p class="deskripsi">You Will Need This</p>
+                <p>Data Keuangan Akan Update Selama 1 Hari klik tabel biru dibawah ini untuk melihat data keuangan lebih lanjut.</p>
+                <p><a href="" class="tbl-biru">Data Keuangan</a></p>
+            </div>
+            <img src="https://img.freepik.com/free-vector/online-learning-isometric-concept_1284-17947.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
+        </section>
 
-      <!-- footer -->
-      <div class="footer animate__animated animate__bounceInUp
-        animate__delay-4s">
-        <i>made with love 💕</i>
-      </div>
+        <!-- untuk tutors -->
+        <section id="Project">
+            <div class="tengah">
+                <div class="kolom">
+                    <p class="deskripsi">Our Top Project</p>
+                    <h2>Project N'K</h2>
+                </div>
+
+                <div class="tutor-list">
+                    <div class="kartu-tutor">
+                        <div>class="tengah">
+                        <img src="c:\Users\Doninur\Desktop\website ngalam\NGALAM.jpg"/>
+                        <p><h3>Ngalam Kreatif</h3></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- untuk partners -->
+        <section id="Partners">
+            <div class="tengah">
+                <div class="kolom">
+                    <p class="deskripsi">Our Top Partners</p>
+                    <h2>Partners</h2>
+                    <p>Salah satu cara menjaga kekompakan, Yaitu dengan membuat setiap anggota memiliki rasa tanggung jawab yang besar terhadap tugas masing masing.</p>
+                </div>
+
+                <div class="partner-list">
+                    <div class="kartu-partner">
+                        <img src="https://www.designevo.com/res/templates/thumb_small/black-wheat-and-mortarboard.png"/>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-  </body>
+
+    <div id="contact">
+        <div class="wrapper">
+            <div class="footer">
+                <div class="footer-section">
+                    <h3>D22.</h3>
+                    <p>Rumah Kreatif dan Advertising</p>
+                </div>
+                <div class="footer-section">
+                    <h3>About</h3>
+                    <p>Hanya ada satu cara untuk sukses. Itu disebut Kerja Keras.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact</h3>
+                    <p>Jl. Pramuka Kabupaten Kotawaringin Timur <b>Sampit</b></p>
+                    <p>Kode Pos: 74321</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Social</h3>
+                    <p>facebook instagram whatsapp</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="copyright">
+        <div class="wrapper">
+            &copy; 2023. <b>Ngalam Kreatif.</b> All Rights Reserved.
+        </div>
+    </div>
+    
+</body>
 </html>
